--- a/dashboard.html
+++ b/dashboard.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css" />
     <link href="./assets/vendor/fonts/circular-std/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="./assets/libs/css/style.css" />
+    <link rel="stylesheet" href="./assets/libs/css/custom-css.css" />
     <link rel="stylesheet" href="./assets/vendor/fonts/fontawesome/css/fontawesome-all.css" />
 </head>
 
@@ -19,35 +20,37 @@
     <!-- ============================================================== -->
     <div class="dashboard-main-wrapper">
         <!-- ============================================================== -->
-        <!-- navbar -->
-        <!-- ============================================================== -->
-        <div class="dashboard-header">
-            <nav class="navbar navbar-expand-lg bg-white fixed-top"><a class="navbar-brand" href="../index.html">PLS</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto navbar-right-top mr-5">
-                        <li class="ml-3"><a href="#"><i class="fas fa-user mr-2"></i>John Brown</a></li>
-                        <li class="ml-3"><a href="login.html"><i class="fas fa-power-off mr-2"></i>Logout</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        <!-- ============================================================== -->
-        <!-- end navbar -->
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->
         <!-- left sidebar -->
         <!-- ============================================================== -->
         <div class="nav-left-sidebar sidebar-dark">
             <div class="menu-list">
-                <nav class="navbar navbar-expand-lg navbar-light"><a class="d-xl-none d-lg-none" href="#">Dashboard</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <nav class="navbar navbar-expand-lg navbar-light"><a class="d-xl-none d-lg-none">Menu</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav flex-column">
                             <li class="nav-divider">Main</li>
-                            <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-fw fa-rocket"></i>Dashboard <span class="badge badge-success">6</span></a></li>
-                            <li class="nav-divider">Features</li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-fw fa-map-marker-alt"></i>The Map<span class="badge badge-success">6</span></a></li>
-                            <li class="nav-item"><a class="nav-link" href="database.html"><i class="fa fa-fw fa-minus"></i>Database<span class="badge badge-success">6</span></a></li>
+                            <li class="nav-item"><a class="nav-link active" href="dashboard.html"><i class="fa fa-fw fa-rocket"></i>Dashboard <span class="badge badge-success">6</span></a></li>
+                            <li class="nav-divider">Data</li>
+                            <li class="nav-item"><a class="nav-link" href="map.html"><i class="fa fa-fw fa-map-marker-alt"></i>Pothole Map<span class="badge badge-success">6</span></a></li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="true" data-target="#submenu-5" aria-controls="submenu-5"><i class="fas fa-fw fa-database"></i>Database</a>
+                                <div id="submenu-5" class="submenu collapse">
+                                    <ul class="nav flex-column">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="active.html">Active Potholes</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="urgent.html">Urgent Potholes</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="repaired.html">Repaired Potholes</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-fw fa-chart-pie"></i>Statistics<span class="badge badge-success">6</span></a></li>
+                            <li class="nav-divider">User</li>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="login.html"><i class="fa fa-fw fa-power-off"></i>Logout <span class="badge badge-success">6</span></a></li>
                         </ul>
                     </div>
                 </nav>
@@ -61,9 +64,23 @@
         <!-- ============================================================== -->
         <div class="dashboard-wrapper">
             <div class="container-fluid dashboard-content">
+
+
+
                 <div class="row">
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
-
+                        <div class="page-header">
+                            <h2 class="pageheader-title">System Dashboard </h2>
+                            <p class="pageheader-text">Nulla euismod urna eros, sit amet scelerisque torton lectus vel mauris facilisis faucibus at enim quis massa lobortis rutrum.</p>
+                            <div class="page-breadcrumb">
+                                <nav aria-label="breadcrumb">
+                                    <ol class="breadcrumb">
+                                        <li class="breadcrumb-item"><a class="breadcrumb-link">Main</a></li>
+                                        <li class="breadcrumb-item active" aria-current="page">Dashboard</li>
+                                    </ol>
+                                </nav>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -78,7 +95,7 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="d-inline-block">
-                                    <h5 class="text-muted">Total Detected</h5>
+                                    <h5 class="text-muted">Potholes<br>Detected</h5>
                                     <h2 class="mb-0">24</h2>
                                 </div>
                                 <div class="float-right icon-circle-medium  icon-box-lg  bg-info-light mt-1">
@@ -97,11 +114,11 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="d-inline-block">
-                                    <h5 class="text-muted">Potholes Active</h5>
+                                    <h5 class="text-muted">Potholes<br>Active</h5>
                                     <h2 class="mb-0"> 20</h2>
                                 </div>
                                 <div class="float-right icon-circle-medium  icon-box-lg  bg-primary-light mt-1">
-                                    <i class="fa fa-user fa-fw fa-sm text-primary"></i>
+                                    <i class="fa fa-exclamation fa-fw fa-sm text-primary"></i>
                                 </div>
                             </div>
                         </div>
@@ -116,11 +133,11 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="d-inline-block">
-                                    <h5 class="text-muted">Potholes Repaired</h5>
+                                    <h5 class="text-muted">Potholes<br>Repaired</h5>
                                     <h2 class="mb-0">4</h2>
                                 </div>
-                                <div class="float-right icon-circle-medium  icon-box-lg  bg-secondary-light mt-1">
-                                    <i class="fa fa-handshake fa-fw fa-sm text-secondary"></i>
+                                <div class="float-right icon-circle-medium  icon-box-lg  bg-brand-light mt-1">
+                                    <i class="fa fa-wrench fa-fw fa-sm text-brand"></i>
                                 </div>
                             </div>
                         </div>
@@ -135,11 +152,11 @@
                         <div class="card">
                             <div class="card-body">
                                 <div class="d-inline-block">
-                                    <h5 class="text-muted">Placeholder</h5>
+                                    <h5 class="text-muted">Marked<br>Urgent</h5>
                                     <h2 class="mb-0">0</h2>
                                 </div>
-                                <div class="float-right icon-circle-medium  icon-box-lg  bg-brand-light mt-1">
-                                    <i class="fa fa-money-bill-alt fa-fw fa-sm text-brand"></i>
+                                <div class="float-right icon-circle-medium  icon-box-lg  bg-secondary-light mt-1">
+                                    <i class="fa fa-exclamation-triangle fa-fw fa-sm text-secondary"></i>
                                 </div>
                             </div>
                         </div>
@@ -155,7 +172,7 @@
                             <blockquote class="blockquote mb-0">
                                 <p>Some imortant text should go here..</p>
                                 <footer class="blockquote-footer text-white">
-                                    <small>          Some other text <cite title="Source Title">for here</cite>        </small>
+                                    <small>Some other text <cite title="Source Title">for here</cite>        </small>
                                 </footer>
                             </blockquote>
                         </div>
@@ -163,7 +180,93 @@
                 </div>
 
 
+
+                <div class="row">
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                        <div class="card">
+                            <h5 class="card-header">Most Recenly Detected</h5>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered first">
+                                    <thead>
+                                        <tr>
+                                            <th>Street</th>
+                                            <th>Detected Date</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Tiger Nixon</td>
+                                            <td>System Architect</td>
+                                            <td>Edinburgh</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Garrett Winters</td>
+                                            <td>Accountant</td>
+                                            <td>Tokyo</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ashton Cox</td>
+                                            <td>Junior Technical Author</td>
+                                            <td>San Francisco</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Cedric Kelly</td>
+                                            <td>Senior Javascript Developer</td>
+                                            <td>Edinburgh</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+
+                    <div class="col-xl-6 col-lg-6 col-md-12 col-sm-12 col-12">
+                        <div class="card">
+                            <h5 class="card-header">Urgent</h5>
+                            <div class="table-responsive">
+                                <table class="table table-striped table-bordered first">
+                                    <thead>
+                                        <tr>
+                                            <th>Street</th>
+                                            <th>Detected Date</th>
+                                            <th>Action</th>
+                                        </tr>
+                                    </thead>
+                                    <tbody>
+                                        <tr>
+                                            <td>Tiger Nixon</td>
+                                            <td>System Architect</td>
+                                            <td>Edinburgh</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Garrett Winters</td>
+                                            <td>Accountant</td>
+                                            <td>Tokyo</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Ashton Cox</td>
+                                            <td>Junior Technical Author</td>
+                                            <td>San Francisco</td>
+                                        </tr>
+                                        <tr>
+                                            <td>Cedric Kelly</td>
+                                            <td>Senior Javascript Developer</td>
+                                            <td>Edinburgh</td>
+                                        </tr>
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
             </div>
+            <!-- CONTAINER END -->
+
+
+
 
             <!-- ============================================================== -->
             <!-- footer -->
@@ -191,6 +294,22 @@
     <script src="./assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
     <script src="./assets/vendor/slimscroll/jquery.slimscroll.js"></script>
     <script src="./assets/libs/js/main-js.js"></script>
+
+    <script>
+        $('.collapse').on('shown.bs.collapse', function() {
+            $(this).parent().find(".fa-angle-down").removeClass("fa-angle-down").addClass("fa-angle-up");
+        }).on('hidden.bs.collapse', function() {
+            $(this).parent().find(".fa-angle-up").removeClass("fa-angle-up").addClass("fa-angle-down");
+        });
+
+        $('.panel-heading a').click(function() {
+            $('.panel-heading').removeClass('active');
+
+            //If the panel was open and would be closed by this click, do not active it
+            if (!$(this).closest('.panel').find('.panel-collapse').hasClass('in'))
+                $(this).parents('.panel-heading').addClass('active');
+        });
+    </script>
 </body>
 
 </html>
