--- a/urgent.html
+++ b/urgent.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="./assets/vendor/bootstrap/css/bootstrap.min.css">
     <link href="./assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
     <link rel="stylesheet" href="./assets/libs/css/style.css">
+    <link rel="stylesheet" href="./assets/libs/css/custom-css.css">
     <link rel="stylesheet" href="./assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
     <link rel="stylesheet" type="text/css" href="./assets/vendor/datatables/css/dataTables.bootstrap4.css">
     <link rel="stylesheet" type="text/css" href="./assets/vendor/datatables/css/buttons.bootstrap4.css">
@@ -24,35 +25,37 @@
     <!-- ============================================================== -->
     <div class="dashboard-main-wrapper">
         <!-- ============================================================== -->
-        <!-- navbar -->
-        <!-- ============================================================== -->
-        <div class="dashboard-header">
-            <nav class="navbar navbar-expand-lg bg-white fixed-top"><a class="navbar-brand" href="../index.html">PLS.</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
-                <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto navbar-right-top mr-5">
-                        <li class="ml-3"><a href="#"><i class="fas fa-user mr-2"></i>John Brown</a></li>
-                        <li class="ml-3"><a href="login.html"><i class="fas fa-power-off mr-2"></i>Logout</a></li>
-                    </ul>
-                </div>
-            </nav>
-        </div>
-        <!-- ============================================================== -->
-        <!-- end navbar -->
-        <!-- ============================================================== -->
-        <!-- ============================================================== -->
         <!-- left sidebar -->
         <!-- ============================================================== -->
         <div class="nav-left-sidebar sidebar-dark">
             <div class="menu-list">
-                <nav class="navbar navbar-expand-lg navbar-light"><a class="d-xl-none d-lg-none" href="#">Dashboard</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
+                <nav class="navbar navbar-expand-lg navbar-light"><a class="d-xl-none d-lg-none">Menu</a><button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav flex-column">
                             <li class="nav-divider">Main</li>
                             <li class="nav-item"><a class="nav-link" href="dashboard.html"><i class="fa fa-fw fa-rocket"></i>Dashboard <span class="badge badge-success">6</span></a></li>
-                            <li class="nav-divider">Features</li>
-                            <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-fw fa-map-marker-alt"></i>The Map<span class="badge badge-success">6</span></a></li>
-                            <li class="nav-item"><a class="nav-link active" href="#"><i class="fa fa-fw fa-minus"></i>Database<span class="badge badge-success">6</span></a></li>
+                            <li class="nav-divider">Data</li>
+                            <li class="nav-item"><a class="nav-link" href="map.html"><i class="fa fa-fw fa-map-marker-alt"></i>Pothole Map<span class="badge badge-success">6</span></a></li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="true" data-target="#submenu-5" aria-controls="submenu-5"><i class="fas fa-fw fa-database"></i>Database</a>
+                                <div id="submenu-5" class="submenu collapse show">
+                                    <ul class="nav flex-column">
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="active.html">Active Potholes</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link active" href="urgent.html">Urgent Potholes</a>
+                                        </li>
+                                        <li class="nav-item">
+                                            <a class="nav-link" href="repaired.html">Repaired Potholes</a>
+                                        </li>
+                                    </ul>
+                                </div>
+                            </li>
                             <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-fw fa-chart-pie"></i>Statistics<span class="badge badge-success">6</span></a></li>
+                            <li class="nav-divider">User</li>
+                            </li>
+                            <li class="nav-item"><a class="nav-link" href="login.html"><i class="fa fa-fw fa-power-off"></i>Logout <span class="badge badge-success">6</span></a></li>
                         </ul>
                     </div>
                 </nav>
@@ -66,16 +69,32 @@
         <!-- ============================================================== -->
         <div class="dashboard-wrapper">
             <div class="container-fluid dashboard-content">
+
+
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <div class="page-header">
+                            <h2 class="pageheader-title">Urgent Potholes</h2>
+                            <div class="page-breadcrumb">
+                                <nav aria-label="breadcrumb">
+                                    <ol class="breadcrumb">
+                                        <li class="breadcrumb-item"><a class="breadcrumb-link">Database</a></li>
+                                        <li class="breadcrumb-item active" aria-current="page">Urgent Potholes</li>
+                                    </ol>
+                                </nav>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+
                 <div class="row">
                     <!-- ============================================================== -->
                     <!-- data table  -->
                     <!-- ============================================================== -->
                     <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
                         <div class="card">
-                            <div class="card-header">
-                                <h5 class="mb-0">The Pothole Database</h5>
-                                <p>This table presents the collection of all recorded potholes.</p>
-                            </div>
+
                             <div class="card-body">
                                 <div class="table-responsive">
                                     <table id="example" class="table table-striped table-bordered second" style="width:100%">
@@ -85,7 +104,7 @@
                                                 <th>Street/Road</th>
                                                 <th>Parish</th>
                                                 <th>Detection Date</th>
-                                                <th>Start date</th>
+                                                <th>Status</th>
                                                 <th>Action</th>
                                             </tr>
                                         </thead>
@@ -95,7 +114,7 @@
                                                 <td>System Architect</td>
                                                 <td>Edinburgh</td>
                                                 <td>61</td>
-                                                <td>2011/04/25</td>
+                                                <td>Normal</td>
                                                 <td>$320,800</td>
                                             </tr>
                                             <tr>
@@ -444,16 +463,6 @@
                                                 <td>$112,000</td>
                                             </tr>
                                         </tbody>
-                                        <tfoot>
-                                            <tr>
-                                                <th>Name</th>
-                                                <th>Position</th>
-                                                <th>Office</th>
-                                                <th>Age</th>
-                                                <th>Start date</th>
-                                                <th>Salary</th>
-                                            </tr>
-                                        </tfoot>
                                     </table>
                                 </div>
                             </div>
