--- a/map.html
+++ b/map.html
@@ -36,13 +36,13 @@
                                 <div id="submenu-5" class="submenu collapse">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link" href="active.html">Active Potholes</a>
+                                            <a class="nav-link p-3" href="active.html">Active Potholes</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="urgent.html">Urgent Potholes</a>
+                                            <a class="nav-link p-3" href="urgent.html">Urgent Potholes</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link" href="repaired.html">Repaired Potholes</a>
+                                            <a class="nav-link p-3" href="repaired.html">Repaired Potholes</a>
                                         </li>
 
                                 </div>
