fixed php files

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,21 +28,21 @@
                     <div class="collapse navbar-collapse" id="navbarNav">
                         <ul class="navbar-nav flex-column">
                             <li class="nav-divider">Main</li>
-                            <li class="nav-item"><a class="nav-link active" href="dashboard.html"><i class="fa fa-fw fa-rocket"></i>Dashboard <span class="badge badge-success">6</span></a></li>
+                            <li class="nav-item"><a class="nav-link active" href="dashboard.php"><i class="fa fa-fw fa-rocket"></i>Dashboard <span class="badge badge-success">6</span></a></li>
                             <li class="nav-divider">Data</li>
-                            <li class="nav-item"><a class="nav-link" href="map.html"><i class="fa fa-fw fa-map-marker-alt"></i>Pothole Map<span class="badge badge-success">6</span></a></li>
+                            <li class="nav-item"><a class="nav-link" href="map.php"><i class="fa fa-fw fa-map-marker-alt"></i>Pothole Map<span class="badge badge-success">6</span></a></li>
                             <li class="nav-item">
                                 <a class="nav-link" href="#" data-toggle="collapse" aria-expanded="true" data-target="#submenu-5" aria-controls="submenu-5"><i class="fas fa-fw fa-database"></i>Database</a>
                                 <div id="submenu-5" class="submenu collapse">
                                     <ul class="nav flex-column">
                                         <li class="nav-item">
-                                            <a class="nav-link p-3" href="active.html">Active Potholes</a>
+                                            <a class="nav-link p-3" href="active.php">Active Potholes</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link p-3" href="urgent.html">Urgent Potholes</a>
+                                            <a class="nav-link p-3" href="urgent.php">Urgent Potholes</a>
                                         </li>
                                         <li class="nav-item">
-                                            <a class="nav-link p-3" href="repaired.html">Repaired Potholes</a>
+                                            <a class="nav-link p-3" href="repaired.php">Repaired Potholes</a>
                                         </li>
                                     </ul>
                                 </div>
@@ -50,7 +50,7 @@
                             <li class="nav-item"><a class="nav-link" href="#"><i class="fa fa-fw fa-chart-pie"></i>Statistics<span class="badge badge-success">6</span></a></li>
                             <li class="nav-divider">User</li>
                             </li>
-                            <li class="nav-item"><a class="nav-link" href="login.html"><i class="fa fa-fw fa-power-off"></i>Logout <span class="badge badge-success">6</span></a></li>
+                            <li class="nav-item"><a class="nav-link" href="login.php"><i class="fa fa-fw fa-power-off"></i>Logout <span class="badge badge-success">6</span></a></li>
                         </ul>
                     </div>
                 </nav>
